@@ -2,6 +2,13 @@
 \name{NEWS}
 \title{NEWS file for the mlt package}
 
+\section{Changes in Version 1.0-2 (2018-05-11)}{
+  \itemize{
+    \item{Make sure transformation functions outside \code{bounds} are minus
+          or plus \code{Inf}.}
+  }
+}
+
 \section{Changes in Version 1.0-1 (2018-04-20)}{
   \itemize{
     \item{\code{estfun, parm = coef(object, fixed = TRUE))} evaluates
@@ -11,6 +18,7 @@
           \code{estfun}.}
   }
 }
+
 
 \section{Changes in Version 1.0-0 (2018-03-07)}{
   \itemize{
